kubernetes/apps/external/truenas/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: truenas
  namespace: external
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: truenas.png
    gethomepage.dev/name: Truenas
    gethomepage.dev/group: Storage
    gethomepage.dev/widget.type: truenas
    gethomepage.dev/widget.url: http://truenas.external
    gethomepage.dev/widget.key: ${SECRET_TRUENAS_TOKEN}
    hajimari.io/icon: mdi:truenas
    hajimari.io/enable: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: &host "ph.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: pihole
                port:
                  number: 80
  tls:
    - hosts:
        - *host

---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
  namespace: external
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
